# secTransFullProject

./: .gitignore  package-lock.json  package.json
backend/: README.md  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts
backend/src/middlewares/: auth.ts  socket.ts
backend/src/models/: Message.ts  User.ts
backend/src/routes/: AuthRoutes.ts  publicKey.ts  sendEncryptedRoutes.ts  view.ts
backend/src/utils/: auth.ts  multer.ts
frontend/: SecureTransmissionApp.spec  config.env  dev_runner.py  gui_app.py  messenger_local.db  notes  pyproject.toml  requirements.txt  secure_messenger_ui.py  secure_messenger_ui.spec  setup_env.py
frontend/ui/: chat_screen.py  login_screen.py  register_screen.py
frontend/user_data/files/: 20251028_124509_first.json
frontend/utils/: clear_window.py  decryption.py  encryption.py  fetch_and_display_history.py  fetch_users.py  load_chat_history.py  local_db.py  login_user.py  logout_user.py  messenger_local.db  on_user_select.py  register_user.py  save_file.py  save_logged_in_user.py  save_messages.py  send_file_msg.py  send_text_msg.py  socket_connection.py  socket_receive.py
